Refactor README for clarity and consistency in Maven version management instructions